tests/fixtures/errors/const_cycle.gcl
// Const cycle: X depends on Y, Y depends on X
const X: Dimensionless = Y + 1.0;
const Y: Dimensionless = X + 1.0;
